--- a/styles/flower.css
+++ b/styles/flower.css
@@ -3,7 +3,246 @@
     ;
 }
 
+.banner-flower {
+    width: 400 px;
+    height: 500px;
+}
+
+.banner-title {
+    padding: 40px;
+    margin-right: 50;
+    font-size: 80px;
+    font-style: normal;
+    font-weight: 800;
+    line-height: normal;
+    width: 708px;
+}
+
+.banner-discription {
+    color: rgba(39, 39, 39, 0.60);
+    font-family: Lato;
+    margin: 50;
+    padding: 70px;
+    width: 634px;
+    text-align: left;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 30px;
+    /* 166.667% */
+}
+
 .banner {
     display: flex;
     align-items: center;
+}
+
+.btn-primary {
+
+    padding: 20px 43px;
+    align-items: flex-start;
+    margin: 70px;
+    gap: 10px;
+    border-radius: 8px;
+    border: none;
+    background: #E55473;
+    color: #FFF;
+    font-family: Lato;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+}
+
+.about {
+    padding: 130px;
+    border-radius: 10px;
+    margin: 130px 0;
+}
+
+.section-title {
+    text-align: center;
+    font-size: 35px;
+}
+
+.section-discription {
+    color: rgba(39, 39, 39, 0.60);
+    text-align: center;
+    font-family: Lato;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 30px;
+}
+
+main {
+    display: flex;
+
+    flex-direction: column;
+    flex-shrink: 0;
+    text-align: center;
+}
+
+.flower1 {
+    width: 300x;
+    height: 400px;
+    flex-shrink: 0;
+    border-radius: 400px 400px 0px 0px;
+    background: rgba(167, 33, 98, 0.15);
+    background: url(<path-to-image>), lightgray 50% / cover no-repeat;
+}
+
+.flower2 {
+    width: 300px;
+    height: 400px;
+    flex-shrink: 0;
+    border-radius: 300px 300px 0px 0px;
+    background: rgba(5, 151, 160, 0.15);
+    background: url(<path-to-image>), lightgray 50% / cover no-repeat;
+}
+
+.flower3 {
+    width: 300px;
+    height: 400px;
+    flex-shrink: 0;
+    background: url(<path-to-image>), lightgray 50% / cover no-repeat;
+    border-radius: 300px 300px 0px 0px;
+    background: rgba(71, 125, 17, 0.15);
+}
+
+.hot-deal {
+    justify-content: center;
+    gap: 100px;
+    display: flex;
+    color: #272727;
+    font-size: 20px;
+    font-style: normal;
+    line-height: normal;
+    border-radius: 8px;
+    background: rgba(229, 84, 115, 0.05);
+}
+
+.hot-deal-title {
+    display: flex;
+    flex-direction: column;
+    flex-shrink: 0;
+
+}
+
+.hot-deal-discription {
+    color: rgba(39, 39, 39, 0.60);
+    text-align: center;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 30px;
+    /* 166.667% */
+}
+
+.inista-discription {
+    color: rgba(39, 39, 39, 0.60);
+    text-align: center;
+    font-family: Lato;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 30px;
+    /* 166.667% */
+}
+
+.featured {
+    display: flex;
+    justify-content: center;
+    height: 471px;
+    gap: 10px;
+}
+
+.flowers {
+    display: flex;
+    gap: 30px;
+    justify-content: center;
+
+}
+
+.flowers img {
+    width: 250px;
+}
+
+.btn {
+    color: #FFF;
+    font-family: Lato;
+    font-size: 20px;
+    font-style: normal;
+    border: none;
+    font-weight: 700;
+    line-height: normal;
+    width: 150px;
+    height: 64px;
+    flex-shrink: 0;
+    border-radius: 8px;
+    background: #E55473;
+}
+
+.banner2 {
+    width: 1200px;
+    height: 400px;
+    margin: 70px;
+    flex-shrink: 0;
+    border-radius: 8px;
+    background-image: url("/flower-asset/Rectangle\ 9.png");
+}
+
+.banner2-discription {
+    color: rgba(39, 39, 39, 0.60);
+    text-align: center;
+    font-family: Lato;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 30px;
+    /* 166.667% */
+}
+
+.email {
+    width: 700px;
+    height: 50px;
+    border: none;
+    flex-shrink: 0;
+    border-radius: 8px;
+    background: #FFF;
+}
+
+
+.footer-title {
+    padding-top: 40px;
+    color: #E55473;
+    font-family: Lato;
+    font-size: 48px;
+    text-align: center;
+    font-style: normal;
+    font-weight: 800;
+    line-height: normal;
+}
+
+.footer {
+
+    width: 100%;
+    height: 300px;
+    flex-shrink: 0;
+    background-color: #111010;
+    ;
+}
+
+.footer-details {
+    color: rgba(255, 255, 255, 0.90);
+    text-align: center;
+    font-family: Lato;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 30px;
+}
+
+.shop {
+    color: white;
 }
